add rfm95kernel configs

--- a/drivers/rf/Kconfig
+++ b/drivers/rf/Kconfig
@@ -46,6 +46,24 @@ config RF_RFM95_SPI_FREQUENCY
 	---help---
 		Select your board pin connected to RST RFM95 pin.
 
+config RF_RFM95_TX_FREQ
+	int "RFM95 TX frequency"
+	default 868000000
+	---help---
+		Select LoRa TX frequency: 433/863-870 for italy.
+
+config RF_RFM95_TX_POWER
+	int "RFM95 TX power"
+	default 17
+	---help---
+		Select LoRa TX power.
+
+config RF_RFM95_SYNC_WORD
+	int "RFM95 sync word"
+	default 0
+	---help---
+		Select packet sync word: Select 0 for none.
+
 endif # RF_RFM95
 
 endif # DRIVERS_RF
