--- a/Kconfig
+++ b/Kconfig
@@ -2048,6 +2048,7 @@ menu "Library Routines"
 source "libs/libc/Kconfig"
 source "libs/libxx/Kconfig"
 source "libs/libdsp/Kconfig"
+source "libs/libisxcamera/Kconfig"
 endmenu
 
 menu "Open Asymmetric Multi Processing"
